# project-two-2025

./: README.md  package-lock.json  package.json  start-venturis.bat  test-minimal-server.js  test-server-4001.js  vercel.json
Users/steve/Trading/: .env.example  .gitignore  README.md  pyproject.toml
Users/steve/Trading/config/: strategy.yaml
Users/steve/Trading/data/: factors.example.csv  factors.fmp.csv  factors.fmp.full.csv  insider.fmp.csv  news.fmp.csv  review_notes.csv  universe.example.csv  universe.fmp.csv  universe.fmp.full.csv  universe.seed.csv
Users/steve/Trading/scripts/: run_daily.ps1
Users/steve/Trading/src/trading_rotation/: __init__.py  backtest.py  cli.py  config.py  dashboard.py  fmp.py  history.py  model.py  portfolio.py  signals.py
Users/steve/Trading/src/trading_rotation/pages/: 1_Recommendations.py  2_Risk_Review.py  3_Paper_Portfolio.py  4_Performance.py  5_Backtest.py
Users/steve/Trading/tests/: test_model.py
pictet-express/: .gitignore  ADVISOR_ASSIGNMENT_IMPLEMENTATION.md  ADVISOR_VIEW_ONLY_RESTRICTIONS.md  APPROVED_EMAILS_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PORTFOLIO_DIVERSIFICATION.md  db-schema.sql  dev-server.js  init-db.js  package-lock.json  package.json  run-server.bat  server.js  start-server.bat
pictet-express/data/: Capital Called.docx  Fund cash flows.xlsx  messages.json  portfolio1.csv  portfolio2.csv  portfolio_andrei.ionescu.csv  portfolio_anna.kowalski.csv  portfolio_carlos.garcia.csv  portfolio_dimitris.papadopoulos.csv  portfolio_elena.popov.csv  portfolio_erik.andersson.csv  portfolio_eva.novotna.csv  (+15 more)
(+90 files in other folders)
