[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-rotation"
version = "0.1.0"
description = "Small/mid-cap sector-rotation research system"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "python-dotenv",
  "pyyaml",
  "streamlit",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

